--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,25 @@
 
 # Mac
 *.DS_Store
+
+# Vue
+node_modules
+/dist
+
+# Local Env Files
+.env.local
+.env.*.local
+
+# Log Files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor Directories and Files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
